feat: get repl ready

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.87"
+derive_more = { version = "1.0.0", features = ["full"] }
+regex = { version = "1.10.6" }
+thiserror = "1.0.63"
 ux = "0.1.6"
