--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.87"
+ctrlc = "3.4.5"
 derive_more = { version = "1.0.0", features = ["full"] }
 regex = { version = "1.10.6" }
 thiserror = "1.0.63"
