--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 ctrlc = "3.4.5"
 derive_more = { version = "1.0.0", features = ["full"] }
 regex = { version = "1.10.6" }
+sdl2 = "0.37.0"
 thiserror = "1.0.63"
 ux = "0.1.6"
